--- a/package.json
+++ b/package.json
@@ -11,7 +11,15 @@
   "dependencies": {
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "next": "16.0.0"
+    "next": "16.0.0",
+    "three": "^0.180.0",
+    "three-globe": "^2.44.1",
+    "@react-three/fiber": "^9.4.0",
+    "@react-three/drei": "^10.7.6",
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^2.6.0",
+    "class-variance-authority": "^0.7.1",
+    "lucide-react": "^0.461.0"
   },
   "devDependencies": {
     "typescript": "^5",
